@@ -1,6 +1,8 @@
 2.1.3.dev
 ----------------
 
+- fix issue179: protect deletion of versions 
+
 
 2.1.2
 ----------------
